@@ -2,6 +2,8 @@ Revision history for Syntax-Construct
 
 1.020   2021-05-24
         - Fix perldelta links
+        - Add "method-on-any-string" for 5.018
+        - Improve doc and error messages
 
 1.019   2021-05-24
         - Perl 5.34 was released
